# smd-challenge

./: bom.csv  fp-lib-table  openocd.cfg  smd-challenge.kicad_pcb  smd-challenge.kicad_prl  smd-challenge.kicad_pro  smd-challenge.kicad_sch  sym-lib-table
DX07S016JA1R1500/: DX07S016JA1R1500.lib  JAE_DX07S016JA1R1500.kicad_mod
USBConn6.pretty/: JAE_DX07S016JA1R1500.kicad_mod
fab/: smd-challenge-B_Cu.gbr  smd-challenge-B_Mask.gbr  smd-challenge-B_Paste.gbr  smd-challenge-B_Silkscreen.gbr  smd-challenge-Edge_Cuts.gbr  smd-challenge-F_Cu.gbr  smd-challenge-F_Mask.gbr  smd-challenge-F_Paste.gbr  smd-challenge-F_Silkscreen.gbr  smd-challenge-NPTH.drl  smd-challenge-PTH.drl  smd-challenge-job.gbrjob
firmware/: Cargo.toml  memory.x  udev.rules
firmware/.cargo/: config
firmware/src/: main.rs
