[package]
name = "smd-challenge"
version = "0.1.0"
authors = ["Matt Mullins <mmullins@mmlx.us>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.2"
cortex-m-rt = "0.6.13"
embedded-hal = "0.2.5"
panic-halt = "0.2.0"
usb-device = "0.2.8"
usbd-hid = "0.5.0"

[dependencies.atsamd-hal]
version = "0.13.0"
features = [ "same51j", "usb" ]

[profile.release]
opt-level = "s"
debug = true
